# ctypes_examples

./: .gitignore  README.md  exCtypes.py  exCtypes_Vector.py
lib_cpp/src/: CMakeLists.txt
lib_cpp/src/files_cpp/: Hello.cpp  Vectors.cpp
srcPy/: CtypesDecorator.py
